# random-shapes

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: update_version.yml
_downloads/f999045fe2d01ceb025e0472fed48172/: basic-usage.ipynb
_modules/: index.html
_modules/random_shapes/: helper.html  points.html  shape.html
_sources/: sg_execution_times.rst.txt
_sources/auto_examples/: basic-usage.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/reference/: Shape.rst.txt  ccw_sort.rst.txt  estimate_angles.rst.txt  get_random_points.rst.txt  index.rst.txt  points_to_numpy.rst.txt
auto_examples/: basic-usage.html  index.html  sg_execution_times.html
docs/: conf.py  index.rst  sg_execution_times.rst
docs/reference/: Node.rst  Point.rst  calculate_segment.rst  get_random_shape.rst  index.rst
examples/: basic-usage.py
reference/: Node.html  Point.html  Shape.html  calculate_segment.html  ccw_sort.html  estimate_angles.html  get_random_points.html  index.html  points_from_numpy.html  points_to_numpy.html
src/random_shapes/: __init__.py  helper.py  image.py  points.py  rnd.py  shape.py  types.py
