[project]
name = "random-shapes"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "relativityhd", email = "tobiashoelzer@hotmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "bezier>=2024.6.20",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "matplotlib>=3.10.0"]
docs = [
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.18.0",
]
lint = ["ruff>=0.9.3"]
