[project]
name = "random-shapes"
dynamic = ["version"]
description = "Generate random shapes with ease."
readme = "README.md"
authors = [{ name = "Tobias Hölzer", email = "tobiashoelzer@hotmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "bezier>=2024.6.20",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.1",
]
license = "GNU GENERAL PUBLIC LICENSE"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://relativityhd.github.io/random-shapes/"
Repository = "https://github.com/relativityhd/random-shapes"
Issues = "https://github.com/relativityhd/random-shapes/issues"

[project.optional-dependencies]
viz = ["matplotlib>=3.10.0"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
docs = [
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.18.0",
]
lint = ["ruff>=0.9.3"]
